# fastapi_order_service

./: .env  .gitignore  alembic.ini  pyproject.toml
alembic/versions/: 2025_06_25_2100-6aba54ad7103_create_table_user.py  2025_06_25_2110-3531670e5db4_alter_table_user.py  2025_06_25_2115-008976889c76_create_table_user_add_new_constraint.py
src/: main.py
src/account/dependencies/: user.py
src/account/models/: user.py
src/account/repositories/: user.py
src/account/routers/: role.py  user.py
src/account/schemas/: __init__.py  user.py
src/account/services/: user.py
src/core/: config.py  routers.py
src/core/orm/: __init__.py  base.py  db.py
tests/: conftest.py
tests/api/account/: test_role.py
tests/fixtures/: async_session.py  database.py
