[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Denis <den.listapad@mail.ru>"]
readme = "README.md"
packages = [{include = "fastapi_project"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
pydantic = "^2.11.7"
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
pytest = "^8.4.1"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pytest-asyncio = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
